--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Evgenija-P.github.io/project-js-filmoteka",
+  "homepage": "https://khAlexander1989.github.io/filmoteka-js-team-project",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-js-filmoteka/"
+    "build": "parcel build src/*.html --public-url /filmoteka-js-team-project/"
   },
   "repository": {
     "type": "git",
